@@ -1,3 +1,4 @@
+Intro: Fixed: The cups are not centered in the display area
 Intro: Shrink the vertical bar "icon" in the vertical direction and give it an aspect ratio more similar to the representation
 Intro: Shrink the vertical bars somewhat vertically
 Intro: Space the vertical bars a bit more horizontally
